@@ -1,6 +1,7 @@
 2009-08-30  higepon  <higepon@users.sourceforge.jp>
 
 	* FFITest.cpp (getArgumentsStub): Added.
+	              (getArgumentsStub2): Added.
 
 2009-08-28  higepon  <higepon@users.sourceforge.jp>
 
